# finance-manager

./: .env.sample  .gitignore  README.md  docker-compose.yml  frontend_specs.md  sample_transactions.csv  sample_transactions_test.csv  test_balance_logic.py
backend/: Dockerfile  README.md  find_landlord_transactions.py  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: accounts.py  categories.py  export.py  import_data.py  login.py  reports.py  transactions.py  users.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  account.py  category.py  transaction.py  user.py
backend/app/services/: recurrence.py
backend/scripts/: debug_query.py  migrate_case.py  migrate_types.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/accounts/: AccountSettingsDialog.tsx  BulkDeleteDestinationAccountsDialog.tsx  CreateAccountDialog.tsx  DeleteDestinationAccountDialog.tsx  DestinationAccountDialog.tsx  ImportDestinationAccountsDialog.tsx
frontend/src/components/auth/: AuthGuard.tsx
frontend/src/components/categories/: CategoryDialog.tsx  (+1 more)
frontend/src/context/: DateRangeContext.tsx
frontend/src/services/: accounts.ts  auth.ts  categories.ts  export.ts  import.ts  reports.ts  transactions.ts
sample_import/: sample_categories.csv  sample_destination_accounts.csv  sample_transactions.csv  sample_transactions_test_2.csv
(+17 files in other folders)
